Change name from mdoc to ditto

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>mdoc</title>
+    <title>ditto</title>
     <!-- LiveReload -->
     <!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 
@@ -12,9 +12,9 @@
     <!-- marked -->
     <script src="./js/marked.js"></script>
 
-    <!-- mdoc -->
-    <script src="./js/mdoc.js"></script>
-    <link rel="stylesheet" href="./css/mdoc.css">
+    <!-- ditto -->
+    <script src="./js/ditto.js"></script>
+    <link rel="stylesheet" href="./css/ditto.css">
 </head>
 <body>
     <!-- essential -->
@@ -29,14 +29,14 @@
 
     <script>
         // essential settings
-        mdoc.index = "README.md",
-        mdoc.sidebar_file = "sidebar.md",
+        ditto.index = "README.md",
+        ditto.sidebar_file = "sidebar.md",
 
         // where the docs are actually stored on github - so you can edit
-        mdoc.base_url = "https://github.com/chutsu/mdoc/edit/gh-pages";
+        ditto.base_url = "https://github.com/chutsu/ditto/edit/gh-pages";
 
         // run
-        mdoc.run();
+        ditto.run();
     </script>
 </body>
 </html>
