Remove protocol for external libraries

--- a/ver/0.1/index.html
+++ b/ver/0.1/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <!-- jQuery -->
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
   <!-- marked -->
-  <script src="http://chutsu.github.io/ditto/ver/0.1/marked.js"></script>
+  <script src="//chutsu.github.io/ditto/ver/0.1/marked.js"></script>
 
   <!-- ditto -->
-  <script src="http://chutsu.github.io/ditto/ver/0.1/ditto.js"></script>
-  <link rel="stylesheet" href="http://chutsu.github.io/ditto/ver/0.1/ditto.css">
+  <script src="//chutsu.github.io/ditto/ver/0.1/ditto.js"></script>
+  <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/0.1/ditto.css">
 </head>
 <body>
   <!-- essential -->
