--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- essential -->
     <div id="sidebar"></div>
     <div id="content"></div>
+    <div id="hide"></div>
 
     <!-- optional -->
     <div id="back_to_top">back to top</div>
