Make search bar slightly more robust

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="back_to_top">back to top</div>
     <div id="edit">edit</div>
     <div id="loading">Loading ...</div>
-    <div id="error">Opps! ... File not found!</div>
+    <div id="error"></div>
 
     <script>
         // essential settings
