Make ditto github search customizable

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         ditto.index = "README.md",
         ditto.sidebar_file = "sidebar.md",
 
+        // optional settings if you want github search
+        ditto.github_username = "chutsu";
+        ditto.github_repo = "ditto";
+
         // where the docs are actually stored on github - so you can edit
         ditto.base_url = "https://github.com/chutsu/ditto/edit/gh-pages";
 
