Add github style syntax highlighter

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!-- marked -->
     <script src="./js/marked.js"></script>
 
+    <!-- highlight.js -->
+    <link rel="stylesheet" href="./css/github.css">
+    <script src="./js/highlight_8.0.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
     <!-- ditto -->
     <script src="./js/ditto.js"></script>
     <link rel="stylesheet" href="./css/ditto.css">
