--- a/ver/latest/index.html
+++ b/ver/latest/index.html
@@ -6,7 +6,7 @@
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- marked -->
-    <script src="//chutsu.github.io/ditto/ver/VER/marked.js"></script>
+    <script src="//chutsu.github.io/ditto/ver/latest/marked.js"></script>
 
     <!-- highlight.js -->
     <link rel="stylesheet" href="./css/github.css">
@@ -14,8 +14,8 @@
     <script>hljs.initHighlightingOnLoad();</script>
 
     <!-- ditto -->
-    <script src="//chutsu.github.io/ditto/ver/VER/ditto.js"></script>
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/VER/ditto.css">
+    <script src="//chutsu.github.io/ditto/ver/latest/ditto.js"></script>
+    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/ditto.css">
 </head>
 <body>
     <!-- essential -->
