Add google code syntax theme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./js/marked.js"></script>
 
     <!-- highlight.js -->
-    <link rel="stylesheet" href="./css/github.css">
+    <link rel="stylesheet" href="./css/google_code.css">
     <script src="./js/highlight_8.0.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
