--- a/ver/0.11/index.html
+++ b/ver/0.11/index.html
@@ -9,7 +9,7 @@
     <script src="//chutsu.github.io/ditto/ver/0.11/marked.js"></script>
 
     <!-- highlight.js -->
-    <link rel="stylesheet" href="./css/github.css">
+    <link rel="stylesheet" href="./css/google_code.css">
     <script src="./js/highlight_8.0.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
