--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="hide"></div>
 
     <!-- optional -->
-    <div id="back_to_top">back to top</div>
+    <div id="back_to_top">top</div>
     <div id="edit">edit</div>
     <div id="loading">Loading ...</div>
     <div id="error"></div>
