--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div id="error"></div>
 
     <!-- jQuery -->
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- marked -->
     <script src="./js/marked.js"></script>
