--- a/index.html
+++ b/index.html
@@ -3,33 +3,30 @@
 <head>
     <title>ditto</title>
 
-    <!-- highlight.js -->
-    <link rel="stylesheet" href="./css/google_code.css">
+    <!-- JQUERY -->
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
-    <!-- ditto -->
+    <!-- MARKED -->
+    <script src="./js/marked.js"></script>
+
+    <!-- DITTO CSS -->
     <link rel="stylesheet" href="./css/ditto.css">
+    <script src="./js/ditto.js"></script>
 </head>
 <body>
-    <!-- essential -->
+    <!-- ESSENTIAL -->
     <div id="sidebar"></div>
     <div id="content"></div>
     <div id="hide"></div>
 
-    <!-- optional -->
+    <!-- OPTIONAL -->
     <div id="back_to_top">top</div>
     <div id="edit">edit</div>
     <div id="loading">Loading ...</div>
     <div id="error"></div>
 
-    <!-- jQuery -->
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
-
-    <!-- marked -->
-    <script src="./js/marked.js"></script>
-
-    <!-- ditto -->
-    <script src="./js/ditto.js"></script>
+    <!-- DITTO -->
     <script>
         $(function($) {
           // essential settings
