Add install script

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ditto</title>
+    <title>TITLE</title>  <!-- EDIT ME!! -->
 
     <!-- JQUERY -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- MARKED -->
-    <script src="./js/marked.js"></script>
+    <script src="http://chutsu.github.io/ditto/ver/latest/marked.js"></script>
 
-    <!-- DITTO CSS -->
-    <link rel="stylesheet" href="./css/ditto.css">
-    <script src="./js/ditto.js"></script>
+    <!-- DITTO -->
+    <link rel="stylesheet" href="http://chutsu.github.io/ditto/ver/latest/ditto.css">
+    <script src="http://chutsu.github.io/ditto/ver/latest/ditto.js"></script>
 </head>
 <body>
     <!-- ESSENTIAL -->
@@ -34,11 +34,11 @@
           ditto.sidebar_file = "sidebar.md",
 
           // optional settings if you want github search
-          ditto.github_username = "chutsu";
-          ditto.github_repo = "ditto";
+          ditto.github_username = null;   // <------- EDIT ME!!
+          ditto.github_repo = null;       // <------- EDIT ME!!
 
           // where the docs are actually stored on github - so you can edit
-          ditto.base_url = "https://github.com/chutsu/ditto/edit/gh-pages";
+          ditto.base_url = "";            // <------- EDIT ME!!
 
           // run
           ditto.run();
