--- a/ver/0.11/index.html
+++ b/ver/0.11/index.html
@@ -12,7 +12,7 @@
 
     <!-- DITTO CSS -->
     <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/0.11/ditto.css">
-    <script src="//chutsu.github.io/ditto/ver/0.11/js/ditto.js"></script>
+    <script src="//chutsu.github.io/ditto/ver/0.11/ditto.js"></script>
 </head>
 <body>
     <!-- ESSENTIAL -->
