--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TITLE</title>  <!-- EDIT ME!! -->
+    <title>ditto</title>  <!-- EDIT ME!! -->
 
     <!-- JQUERY -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -34,11 +34,11 @@
           ditto.sidebar_file = "sidebar.md",
 
           // optional settings if you want github search
-          ditto.github_username = null;   // <------- EDIT ME!!
-          ditto.github_repo = null;       // <------- EDIT ME!!
+          ditto.github_username = chutsu;   // <------- EDIT ME!!
+          ditto.github_repo = ditto;       // <------- EDIT ME!!
 
           // where the docs are actually stored on github - so you can edit
-          ditto.base_url = "";            // <------- EDIT ME!!
+          ditto.base_url = "https://github.com/chutsu/ditto/edit/gh-pages";
 
           // run
           ditto.run();
