--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           ditto.sidebar_file = "sidebar.md",
 
           // optional settings if you want github search
-          ditto.github_username = chutsu;   // <------- EDIT ME!!
-          ditto.github_repo = ditto;       // <------- EDIT ME!!
+          ditto.github_username = "chutsu";   // <------- EDIT ME!!
+          ditto.github_repo = "ditto";       // <------- EDIT ME!!
 
           // where the docs are actually stored on github - so you can edit
           ditto.base_url = "https://github.com/chutsu/ditto/edit/gh-pages";
