Fix page anchor bug

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- DITTO -->
     <link rel="stylesheet" href="http://chutsu.github.io/ditto/ver/latest/ditto.css">
-    <script src="http://chutsu.github.io/ditto/ver/latest/ditto.js"></script>
+    <script src="js/ditto.js"></script>
 </head>
 <body>
     <!-- ESSENTIAL -->
