Fix code highlight

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!-- MARKED -->
     <script src="http://chutsu.github.io/ditto/ver/latest/marked.js"></script>
 
+    <!-- HIGHLIGHT.JS -->
+    <link rel="stylesheet" href="css/github.css">
+    <script src="js/highlight.js"></script>
+
     <!-- DITTO -->
     <link rel="stylesheet" href="http://chutsu.github.io/ditto/ver/latest/ditto.css">
     <script src="js/ditto.js"></script>
