--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
           // optional settings if you want github search
           ditto.github_username = "chutsu";   // <------- EDIT ME!!
-          ditto.github_repo = "ditto";       // <------- EDIT ME!!
+          ditto.github_repo = "ditto";        // <------- EDIT ME!!
+          ditto.highlight_code = false;       // <------- EDIT ME!!
 
           // where the docs are actually stored on github - so you can edit
           ditto.base_url = "https://github.com/chutsu/ditto/edit/gh-pages";
