--- a/ver/0.13/index.html
+++ b/ver/0.13/index.html
@@ -8,15 +8,36 @@
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- MARKED -->
-    <script src="//chutsu.github.io/ditto/ver/0.13/marked.js"></script>
+    <script src="//chutsu.github.io/ditto/ver/13/marked.js"></script>
 
     <!-- HIGHLIGHT.JS -->
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/0.13/github.css">
-    <script src="//chutsu.github.io/ditto/ver/0.13/highlight.js"></script>
+    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/13/github.css">
+    <script src="//chutsu.github.io/ditto/ver/13/highlight.js"></script>
+
+    <!-- MATHJAX -->
+    <script type="text/x-mathjax-config">
+      jax: ["input/TeX", "output/HTML-CSS"],
+      MathJax.Hub.Config({
+        tex2jax: {
+          inlineMath: [['$','$']],
+          processRefs: true
+        },
+        TeX: {
+          equationNumbers: {
+            autoNumber: "all",
+            formatID: function(id) { return null },
+            formatURL: function(id) { return null }
+          }
+        }
+      });
+    </script>
+    <script type="text/javascript"
+      src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+    </script>
 
     <!-- DITTO CSS -->
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/0.13/ditto.css">
-    <script src="//chutsu.github.io/ditto/ver/0.13/ditto.js"></script>
+    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/13/ditto.css">
+    <script src="//chutsu.github.io/ditto/ver/13/ditto.js"></script>
 </head>
 <body>
     <!-- ESSENTIAL -->
