--- a/ver/latest/index.html
+++ b/ver/latest/index.html
@@ -14,6 +14,27 @@
     <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/github.css">
     <script src="//chutsu.github.io/ditto/ver/latest/highlight.js"></script>
 
+    <!-- MATHJAX -->
+    <script type="text/x-mathjax-config">
+      jax: ["input/TeX", "output/HTML-CSS"],
+      MathJax.Hub.Config({
+        tex2jax: {
+          inlineMath: [['$','$']],
+          processRefs: true
+        },
+        TeX: {
+          equationNumbers: {
+            autoNumber: "all",
+            formatID: function(id) { return null },
+            formatURL: function(id) { return null }
+          }
+        }
+      });
+    </script>
+    <script type="text/javascript"
+      src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+    </script>
+
     <!-- DITTO CSS -->
     <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/ditto.css">
     <script src="//chutsu.github.io/ditto/ver/latest/ditto.js"></script>
