--- a/ver/0.13/index.html
+++ b/ver/0.13/index.html
@@ -8,11 +8,11 @@
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- MARKED -->
-    <script src="//chutsu.github.io/ditto/ver/latest/marked.js"></script>
+    <script src="//chutsu.github.io/ditto/ver/13/marked.js"></script>
 
     <!-- HIGHLIGHT.JS -->
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/github.css">
-    <script src="//chutsu.github.io/ditto/ver/latest/highlight.js"></script>
+    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/13/github.css">
+    <script src="//chutsu.github.io/ditto/ver/13/highlight.js"></script>
 
     <!-- MATHJAX -->
     <script type="text/x-mathjax-config">
@@ -36,8 +36,8 @@
     </script>
 
     <!-- DITTO CSS -->
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/ditto.css">
-    <script src="//chutsu.github.io/ditto/ver/latest/ditto.js"></script>
+    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/13/ditto.css">
+    <script src="//chutsu.github.io/ditto/ver/13/ditto.js"></script>
 </head>
 <body>
     <!-- ESSENTIAL -->
