Fix Https-Everywhere bug

--- a/ver/latest/index.html
+++ b/ver/latest/index.html
@@ -4,15 +4,15 @@
     <title>TITLE</title>  <!-- EDIT ME!! -->
 
     <!-- JQUERY -->
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 
     <!-- MARKED -->
     <script src="//chutsu.github.io/ditto/ver/latest/marked.js"></script>
 
     <!-- HIGHLIGHT.JS -->
     <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/github.css">
-    <script src="//chutsu.github.io/ditto/ver/latest/highlight.js"></script>
+    <script src="https://chutsu.github.io/ditto/ver/latest/highlight.js"></script>
 
     <!-- MATHJAX -->
     <script type="text/x-mathjax-config">
@@ -32,12 +32,12 @@
       });
     </script>
     <script type="text/javascript"
-      src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
     </script>
 
     <!-- DITTO CSS -->
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/ditto.css">
-    <script src="//chutsu.github.io/ditto/ver/latest/ditto.js"></script>
+    <link rel="stylesheet" href="https://chutsu.github.io/ditto/ver/latest/ditto.css">
+    <script src="https://chutsu.github.io/ditto/ver/latest/ditto.js"></script>
 </head>
 <body>
     <!-- ESSENTIAL -->
