Add ability to embed youtube videos easily

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ditto</title>  <!-- EDIT ME!! -->
+    <title>ditto</title>
 
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -37,7 +37,6 @@
     <!-- DITTO -->
     <link rel="stylesheet" href="css/ditto.css">
     <script src="js/ditto.js"></script>
-
 </head>
 <body>
     <!-- ESSENTIAL -->
